Bug 1625650 - AddrBookManager.getDirectory should throw instead of returning null when no directory is found. r=mkmelin

--HG--
extra : rebase_source : 188302472956ce9091d892aaa3c0968af6bfb1b9
extra : amend_source : 9da49836f6d4ea63887d284688cd74baab5309b6